--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
     restart: unless-stopped
     ports:
       - 3000:3000
+      - 3000:3000/udp
     networks:
       - next-start
   proxy:
