--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,8 @@ services:
       context: ./frontend
     restart: unless-stopped
     ports:
-      - 3000:3000
-      - 3000:3000/udp
+      - "3000:3000"
+      - "3000:3000/udp"
     networks:
       - next-start
   proxy:
